diesel_infer_query/tests/snapshots/integration_tests__parsing__qualified_wildcard_select.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: CREATE VIEW test AS SELECT users.* FROM users
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: Wildcard {
                schema: None,
                relation: Some(
                    "users",
                ),
                is_left_joined: false,
                source_id: None,
            },
        },
    ],
    subqueries: [],
}
