diesel_infer_query/tests/snapshots/integration_tests__parsing__qualified_wildcard_select_left_join.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT users.*, posts.* FROM users LEFT JOIN posts ON users.id = posts.user_id"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: Wildcard {
                schema: None,
                relation: Some(
                    "users",
                ),
                is_left_joined: false,
                source_id: None,
            },
        },
        SelectField {
            ident: None,
            kind: Wildcard {
                schema: None,
                relation: Some(
                    "posts",
                ),
                is_left_joined: true,
                source_id: None,
            },
        },
    ],
    subqueries: [],
}
