diesel_infer_query/tests/snapshots/integration_tests__parsing__regexp.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT 'abc' REGEXP 'abc', NULL REGEXP 'abc', 'abc' REGEXP NULL,'abc' RLIKE 'abc', NULL RLIKE 'abc'"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                right: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                op: "REGEXP",
                nullability: Nullable,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: None,
                    is_null: true,
                },
                right: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                op: "REGEXP",
                nullability: Nullable,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                right: Literal {
                    value: None,
                    is_null: true,
                },
                op: "REGEXP",
                nullability: Nullable,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                right: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                op: "RLIKE",
                nullability: Nullable,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: None,
                    is_null: true,
                },
                right: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                op: "RLIKE",
                nullability: Nullable,
            },
        },
    ],
    subqueries: [],
}
