diesel_infer_query/tests/snapshots/integration_tests__parsing__similar_to.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT 'abc' SIMILAR TO 'cde', 'ABC' NOT SIMILAR TO NULL, NULL SIMILAR TO 'abc'"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                right: Literal {
                    value: Some(
                        "cde",
                    ),
                    is_null: false,
                },
                op: "SIMILAR TO",
                nullability: NullIfOperandNull,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: Some(
                        "ABC",
                    ),
                    is_null: false,
                },
                right: Literal {
                    value: None,
                    is_null: true,
                },
                op: "NOT SIMILAR TO",
                nullability: NullIfOperandNull,
            },
        },
        SelectField {
            ident: None,
            kind: BinaryOp {
                left: Literal {
                    value: None,
                    is_null: true,
                },
                right: Literal {
                    value: Some(
                        "abc",
                    ),
                    is_null: false,
                },
                op: "SIMILAR TO",
                nullability: NullIfOperandNull,
            },
        },
    ],
    subqueries: [],
}
