diesel_infer_query/tests/snapshots/integration_tests__parsing__simple_table_with_alias.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT u.id, name, u.hair_color AS hair_colour FROM users as u"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "id",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "users",
                ),
                source_id: None,
                field_name: "id",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "name",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "users",
                ),
                source_id: None,
                field_name: "name",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "hair_colour",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "users",
                ),
                source_id: None,
                field_name: "hair_color",
                via_left_join: false,
            },
        },
    ],
    subqueries: [],
}
