diesel_infer_query/tests/snapshots/integration_tests__parsing__subquery.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT (SELECT users.name FROM users WHERE users.id = posts.user_id), (SELECT users.hair_color FROM users WHERE users.id = posts.user_id), (SELECT posts.body FROM users WHERE users.id = posts.user_id)\n              FROM posts"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: Subquery {
                selection: [
                    SelectField {
                        ident: Some(
                            "name",
                        ),
                        kind: Field {
                            schema: None,
                            query_source: Some(
                                "users",
                            ),
                            source_id: None,
                            field_name: "name",
                            via_left_join: false,
                        },
                    },
                ],
            },
        },
        SelectField {
            ident: None,
            kind: Subquery {
                selection: [
                    SelectField {
                        ident: Some(
                            "hair_color",
                        ),
                        kind: Field {
                            schema: None,
                            query_source: Some(
                                "users",
                            ),
                            source_id: None,
                            field_name: "hair_color",
                            via_left_join: false,
                        },
                    },
                ],
            },
        },
        SelectField {
            ident: None,
            kind: Subquery {
                selection: [
                    SelectField {
                        ident: Some(
                            "body",
                        ),
                        kind: Field {
                            schema: None,
                            query_source: Some(
                                "posts",
                            ),
                            source_id: None,
                            field_name: "body",
                            via_left_join: false,
                        },
                    },
                ],
            },
        },
    ],
    subqueries: [],
}
