diesel_infer_query/tests/snapshots/integration_tests__parsing__union.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT id, name FROM old_users WHERE is_active = TRUE UNION SELECT user_id, display_name FROM new_members"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "id",
            ),
            kind: Combined {
                left: Field {
                    schema: None,
                    query_source: Some(
                        "old_users",
                    ),
                    source_id: None,
                    field_name: "id",
                    via_left_join: false,
                },
                right: Field {
                    schema: None,
                    query_source: Some(
                        "new_members",
                    ),
                    source_id: None,
                    field_name: "user_id",
                    via_left_join: false,
                },
                set_operator: Union,
            },
        },
        SelectField {
            ident: Some(
                "name",
            ),
            kind: Combined {
                left: Field {
                    schema: None,
                    query_source: Some(
                        "old_users",
                    ),
                    source_id: None,
                    field_name: "name",
                    via_left_join: false,
                },
                right: Field {
                    schema: None,
                    query_source: Some(
                        "new_members",
                    ),
                    source_id: None,
                    field_name: "display_name",
                    via_left_join: false,
                },
                set_operator: Union,
            },
        },
    ],
    subqueries: [],
}
